Changed to allow the various sensors to take care of their own business